--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:title" content="Content Strategist and Creator for the Tech Industry" />
 	<meta name="twitter:description" content="Emily Brennan boosts content and communications for world-class brands through her digital storytelling and marketing skills." />
-	<meta name="twitter:image" content="https://drive.google.com/open?id=1upxUE2ih7fnWqziuygMB0qkSV9Pj8xTX" />
+	<meta name="twitter:image" content="https://imgur.com/a/dm34Ntb" />
 	<meta name="twitter:creator" content="@Emilybrenn" />
 
 	<script type="text/javascript">
