--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width">
 	<meta name="description" content="Emily Brennan boosts up  content and communications for world-class brands through her digital storytelling and marketing skills.">
 
-	<link rel="stylesheet" href="/src/style.css">
+	<link rel="stylesheet" href="emilybrenn.css">
 
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:title" content="Content Strategist and Creator for the Tech Industry" />
