--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<meta name="description" content="Emily Brennan boosts up  content and communications for world-class brands through her digital storytelling and marketing skills.">
 
 	<link rel="stylesheet" href="emilybrenn.css">
+	<link href="https://fonts.googleapis.com/css?family=Poppins|Rubik+Mono+One|Rubik:700&display=swap" rel="stylesheet">
 
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:title" content="Content Strategist and Creator for the Tech Industry" />
