--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 	<link rel="stylesheet" href="emilybrenn.css">
 	<link href="https://fonts.googleapis.com/css?family=Poppins|Rubik+Mono+One|Rubik:700&display=swap" rel="stylesheet">
+	
+	<link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/232/female-technologist-type-1-2_1f469-1f3fb-200d-1f4bb.png">
 
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:title" content="Content Strategist and Creator for the Tech Industry" />
