--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Content Strategist | Emily Brennan</title>
+	<title>Emily Brennan Media</title>
 	<meta name="viewport" content="width=device-width">
-	<meta name="description" content="Emily Brennan boosts up  content and communications for world-class brands through her digital storytelling and marketing skills.">
+	<meta name="description" content="Emily Brennan boosts content and communications for world-class brands through her digital storytelling and marketing skills.">
 
 	<link rel="stylesheet" href="emilybrenn.css">
 	<link href="https://fonts.googleapis.com/css?family=Poppins|Rubik+Mono+One|Rubik:700&display=swap" rel="stylesheet">
