--- a/index.html
+++ b/index.html
@@ -57,23 +57,19 @@
 		<div class="roles">
 			<section>
 				<h4>Rutgers Law School </h4>
-				<p style="color:#5445a1">Director of Marketing & Communications</p>
+				<p style="color:#5445a1">Director of Marketing & Communications | 2018-Present</p>
 				<p>Driving strategic communications and marketing for one of the largest public law schools in the U.S. with campuses in two major markets—NYC and Philadelphia.</p>
-				<p>🚀Increased social media impressions by 69% to a total 5.2mm+ content views and increased engagement by 184% across channels over first year.</p>
-				<p>📊A/B tested paid social media campaigns with an average of $11 per lead—more than 50% lower than the average cost on Facebook and Instagram.</p>
-				<p>
-					<p>✨ Created valuable content marketing assets, including podcasts and blog posts, resulting in a 21% increase in overall website traffic and a 19% increase in new site users.</p>
+				<p>🚀 Increased social media impressions by 69% to a total 5.2mm+ content views and increased engagement by 184% across channels over first year.</p>
+				<p>📊 A/B tested paid social media campaigns with an average of $11 per lead—more than 50% lower than the average cost on Facebook and Instagram.</p>
+				<p>✨ Created valuable content marketing assets, including podcasts and blog posts, resulting in a 21% increase in overall website traffic and a 19% increase in new site users.</p>
 			</section>
 			<section>
 				<h4>Penn Law</h4>
-				<p style="color:#5445a1">Senior Specialist, Digital Communications</p>
+				<p style="color:#5445a1">Senior Specialist, Digital Communications | 2012-2018</p>
 				<p>Led social media marketing and shaped online brand positioning. Product and project manager for websites and apps, making UI/UX decisions to make our digital platforms simpler, clearer, and easier to use while solving problems facing the institution
-					and its audiences.
-				</p>
-				<p>
-					⚡️ Led cross-functional teams on complex digital projects, including an online alumni fundraising integrated marketing campaign yielding more than $121,000 in 24 hours.</p>
-				<p>
-					🎯 Developed GTM marketing plan for a non-degree academic program, positively impacting revenue with 30% of enrollees citing social media ads as their reason for submitting a seat deposit.</p>
+					and its audiences.</p>
+				<p>⚡️ Led cross-functional teams on complex digital projects, including an online alumni fundraising integrated marketing campaign yielding more than $121,000 in 24 hours.</p>
+				<p>🎯 Developed GTM marketing plan for a non-degree academic program, positively impacting revenue with 30% of enrollees citing social media ads as their reason for submitting a seat deposit.</p>
 			</section>
 			<section>
 				<h4>Other Clients</h4>
