--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 		<div class="roles">
 			<section>
 				<h4>Rutgers Law School </h4>
-				<p style="color:#5445a1">Director of Marketing & Communications | 2018-Present</p>
+				<p style="color:#5445a1">Director of Marketing & Communication</p>
+				<p style="color:#a1a1a1">2018-Present</p>
 				<p>Driving strategic communications and marketing for one of the largest public law schools in the U.S. with campuses in two major markets—NYC and Philadelphia.</p>
 				<p>🚀 Increased social media impressions by 69% to a total 5.2mm+ content views and increased engagement by 184% across channels over first year.</p>
 				<p>📊 A/B tested paid social media campaigns with an average of $11 per lead—more than 50% lower than the average cost on Facebook and Instagram.</p>
@@ -65,7 +66,8 @@
 			</section>
 			<section>
 				<h4>Penn Law</h4>
-				<p style="color:#5445a1">Senior Specialist, Digital Communications | 2012-2018</p>
+				<p style="color:#5445a1">Senior Specialist, Digital Communications</p>
+				<p style="color:#a1a1a1">2012-2018</p>
 				<p>Led social media marketing and shaped online brand positioning. Product and project manager for websites and apps, making UI/UX decisions to make our digital platforms simpler, clearer, and easier to use while solving problems facing the institution
 					and its audiences.</p>
 				<p>⚡️ Led cross-functional teams on complex digital projects, including an online alumni fundraising integrated marketing campaign yielding more than $121,000 in 24 hours.</p>
@@ -74,6 +76,7 @@
 			<section>
 				<h4>Other Clients</h4>
 				<p style="color:#5445a1">Freelance Services</p>
+				<p style="color:#a1a1a1">Since 2008</p>
 				<p>Communications services provided to small tech startups and other leading clients. Notable projects included:</p>
 				<p>✈️ Authored all web copy for <a href="https://www.hipmunk.com/Flights-to-Philadelphia-PA">Hipmunk</a>'s Philadelphia city guide.</p>
 				<p>✍️ Copywriting for social deals website <a href="https://signpost.com" target="_blank">Signpost.com</a>, sponsored by Google Ventures and Spark Capital.</p>
