--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 			</section>
 			<section>
 				<h4>Penn Law</h4>
-				<p style="color:#5445a1">Senior Specialist, Digital Communications<br />
-				<style="color:#a1a1a1">2012-2018</p>
+				<p style="color:#5445a1">Senior Specialist, Digital Communications</p>
+				<p style="color:#a1a1a1 line-height:80%">2012-2018</p>
 				<p>Led social media marketing and shaped online brand positioning. Product and project manager for websites and apps, making UI/UX decisions to make our digital platforms simpler, clearer, and easier to use while solving problems facing the institution
 					and its audiences.</p>
 				<p>⚡️ Led cross-functional teams on complex digital projects, including an online alumni fundraising integrated marketing campaign yielding more than $121,000 in 24 hours.</p>
