--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<p class="name">Emily Brennan</a>
 			</p>
 
-			<p>Content, communications, and marketing for leading brands.</p>
+			<p class="sub-name">Content, communications, and marketing for leading brands.</p>
 
 		</article>
 	</header>
