--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Emily Brennan Media</title>
 	<meta name="viewport" content="width=device-width">
-	<meta name="description" content="Emily Brennan boosts content and communications for world-class brands through her digital storytelling and marketing skills.">
+	<meta name="description" content="Emily Brennan boosts leading brands through digital storytelling and marketing.">
 
 	<link rel="stylesheet" href="emilybrenn.css">
 	<link href="https://fonts.googleapis.com/css?family=Poppins|Rubik+Mono+One|Rubik:700&display=swap" rel="stylesheet">
@@ -15,9 +15,20 @@
 
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:title" content="Content Strategist and Creator for the Tech Industry" />
-	<meta name="twitter:description" content="Emily Brennan boosts content and communications for world-class brands through her digital storytelling and marketing skills." />
+	<meta name="twitter:description" content="Emily Brennan boosts leading brands through digital storytelling and marketing." />
 	<meta name="twitter:image" content="https://imgur.com/a/dm34Ntb" />
 	<meta name="twitter:creator" content="@Emilybrenn" />
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-10616204-3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-10616204-3');
+</script>
+
 
 </head>
 
