--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
 			<h2>👋 Nice to meet you!</h2>
 			<p>I'm Emily Brennan, a communications and content strategist who cares deeply for building community through content marketing, social media, and leading transformative digital projects that yield long-term sustainable results. </p>
 			<p>🏆 Two-time People’s Voice Webby Award winner.</p>
-			<p>🎓 Masters from <a href="https://home.www.upenn.edu">Univeristy of Pennsylvania</a>, Mini-MBA from <a href="https://www.business.rutgers.edu/">Rutgers Business School</a>, Bachelors from <a href="https://www.lasalle.edu/">La Salle University</a>.</p>
+			<p>🎓 Masters from <a href="https://home.www.upenn.edu" target="_blank">University of Pennsylvania</a>, Mini-MBA from <a href="https://www.business.rutgers.edu/" target="_blank">Rutgers Business School</a>, Bachelors from <a href="https://www.lasalle.edu/" target="_blank">La Salle University</a>.</p>
 			<p>🎖 Professional certifications in product marketing, product management, inbound marketing, content strategy, and more.</p>
 
-			<p>💌 Get in Touch: <a href="https://www.linkedin.com/in/emilybrennan/">LinkedIn</a> | <a href="https://twitter.com/emilybrenn">Twitter</a></p>
+			<p>💌 Get in Touch: <a href="https://www.linkedin.com/in/emilybrennan/" target="_blank">LinkedIn</a> | <a href="https://twitter.com/emilybrenn" target="_blank">Twitter</a></p>
+			<p>✨ View My Work: <a href="http://bit.ly/emilybrenn-portfolio" target="_blank">Portfolio</a></p>
 		</section>
 
 		<div class="home">
@@ -95,7 +96,7 @@
 				</p>
 			</section>
 		</div>
-		<p class="solo"> 👀 P.S. You can always see more of my work and <a href="https://www.linkedin.com/in/emilybrennan/">connect with me on LinkedIn</a>.</p>
+		<p class="solo"> 👀 P.S. You can always <a href="http://bit.ly/emilybrenn-portfolio" target="_blank">see more of my work</a> and <a href="https://www.linkedin.com/in/emilybrennan/" target="_blank">connect with me on LinkedIn</a>.</p>
 
 	</main>
 	</div>
