--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Emily Brennan Media</title>
 	<meta name="viewport" content="width=device-width">
-	<meta name="description" content="Emily Brennan boosts leading brands through digital storytelling and marketing.">
+	<meta name="description" content="Emily Brennan boosts leading brands through digital storytelling and strategy.">
 
 	<link rel="stylesheet" href="emilybrenn.css">
 	<link href="https://fonts.googleapis.com/css?family=Poppins|Rubik+Mono+One|Rubik:700&display=swap" rel="stylesheet">
@@ -14,8 +14,8 @@
 	<link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/232/female-technologist-type-1-2_1f469-1f3fb-200d-1f4bb.png">
 
 	<meta name="twitter:card" content="summary" />
-	<meta name="twitter:title" content="Content Strategist and Creator for the Tech Industry" />
-	<meta name="twitter:description" content="Emily Brennan boosts leading brands through digital storytelling and marketing." />
+	<meta name="twitter:title" content="Digital Strategist and Storyteller for the Tech Industry" />
+	<meta name="twitter:description" content="Emily Brennan boosts leading brands through digital storytelling and strategy." />
 	<meta name="twitter:image" content="https://imgur.com/a/dm34Ntb" />
 	<meta name="twitter:creator" content="@Emilybrenn" />
 	
@@ -49,7 +49,7 @@
 
 		<section class="home">
 			<h2>👋 Nice to meet you!</h2>
-			<p>I'm Emily Brennan, a communications and content strategist who cares deeply for building community through content marketing, social media, and leading transformative digital projects that yield long-term sustainable results. </p>
+			<p>I'm Emily Brennan, a digital strategist and storyteller who cares deeply for building community through content marketing, social media, and leading transformative digital projects that yield long-term sustainable results. </p>
 			<p>🏆 Two-time People’s Voice Webby Award winner.</p>
 			<p>🎓 Masters from <a href="https://home.www.upenn.edu" target="_blank">University of Pennsylvania</a>, Mini-MBA from <a href="https://www.business.rutgers.edu/" target="_blank">Rutgers Business School</a>, Bachelors from <a href="https://www.lasalle.edu/" target="_blank">La Salle University</a>.</p>
 			<p>💌 Get in Touch: <a href="https://www.linkedin.com/in/emilybrennan/" target="_blank">LinkedIn</a> | <a href="https://twitter.com/emilybrenn" target="_blank">Twitter</a></p>
