--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 				projects, I am an empathetic leader, teammate, and colleague who thrives on cross-functional teams in complex organizations.</p>
 
 			<h3> 👩🏻‍💻Recent Work</h3>
+			<p><strong>Currenly:</strong> Digital Experience Manager on the Cisco Webex Growth team.</p>
 		</div>
 		<div class="roles">
 			<section>
