--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		<div class="roles">
 			<section>
 				<h4>Rutgers Law School </h4>
-				<p style="color:#5445a1">Director of Marketing & Communication</p>
+				<p style="color:##3b6c82">Director of Marketing & Communication</p>
 				<p style="color:#a1a1a1">2018-Present</p>
 				<p>Driving strategic communications and marketing for one of the largest public law schools in the U.S. with campuses in two major markets—NYC and Philadelphia.</p>
 				<p>🚀 Increased social media impressions by 69% to a total 5.2mm+ content views and increased engagement by 184% across channels over first year.</p>
@@ -76,7 +76,7 @@
 			</section>
 			<section>
 				<h4>Penn Law</h4>
-				<p style="color:#5445a1">Senior Specialist, Digital Communications</p>
+				<p style="color:##3b6c82">Senior Specialist, Digital Communications</p>
 				<p style="color:#a1a1a1" style="line-height:0.8">2012-2018</p>
 				<p>Led social media marketing and shaped online brand positioning. Product and project manager for websites and apps, making UI/UX decisions to make our digital platforms simpler, clearer, and easier to use while solving problems facing the institution
 					and its audiences.</p>
@@ -85,7 +85,7 @@
 			</section>
 			<section>
 				<h4>Other Clients</h4>
-				<p style="color:#5445a1">Freelance Services</p>
+				<p style="color:##3b6c82">Freelance Services</p>
 				<p style="color:#a1a1a1">Since 2008</p>
 				<p>Communications services provided to small tech startups and other leading clients. Notable projects included:</p>
 				<p>✈️ Authored all web copy for <a href="https://www.hipmunk.com/Flights-to-Philadelphia-PA">Hipmunk</a>'s Philadelphia city guide.</p>
