--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<p class="name">Emily Brennan</a>
 			</p>
 
-			<p class="sub-name">Content, communications, and marketing for leading brands.</p>
+			<p class="sub-name">Digital strategy and storytelling for leading brands.</p>
 
 		</article>
 	</header>
